update: swagger - menu-admin
